# pkomga

./: Cargo.toml  config.example.json  justfile  readme.md
.github/actions/setup/: action.yaml
.github/workflows/: build.yaml
src/: bgm.rs  config.rs  komga.rs  main.rs
