[package]
name = "pkomga"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
# sqlx = { version = "0.8.1", features = ["sqlite"] }
reqwest = { version = "0.12.7", features = ["json", "multipart"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127" }
indicatif = { version = "0.17.8" }
base64 = { version = "0.22.1" }
lazy_static = { version = "1.5.0" }