[package]
name = "pkomga"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json", "multipart"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127" }
indicatif = { version = "0.17.8" }
lazy_static = { version = "1.5.0" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
openssl = { version = "0.10", features = ["vendored"] }
